add style to commenta detail view controller

--- a/StackQA/en.lproj/Main.storyboard
+++ b/StackQA/en.lproj/Main.storyboard
@@ -670,10 +670,10 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="ZoJ-di-PoA" secondAttribute="trailing" id="aAG-Sb-RXV"/>
-                                            <constraint firstItem="ZoJ-di-PoA" firstAttribute="top" secondItem="R1g-dp-HKs" secondAttribute="top" id="bAc-K6-xUd"/>
-                                            <constraint firstAttribute="bottom" secondItem="ZoJ-di-PoA" secondAttribute="bottom" constant="30" id="g0s-SJ-cGD"/>
-                                            <constraint firstItem="ZoJ-di-PoA" firstAttribute="leading" secondItem="R1g-dp-HKs" secondAttribute="leading" id="lry-QZ-l2y"/>
+                                            <constraint firstAttribute="bottom" secondItem="ZoJ-di-PoA" secondAttribute="bottom" id="4TS-TR-4Ud"/>
+                                            <constraint firstAttribute="trailing" secondItem="ZoJ-di-PoA" secondAttribute="trailing" constant="8" id="RAp-Ns-2QB"/>
+                                            <constraint firstItem="ZoJ-di-PoA" firstAttribute="top" secondItem="R1g-dp-HKs" secondAttribute="top" constant="30" id="V55-rL-AHg"/>
+                                            <constraint firstItem="ZoJ-di-PoA" firstAttribute="leading" secondItem="R1g-dp-HKs" secondAttribute="leading" constant="8" id="xaJ-01-Buh"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -719,7 +719,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="Mt7-zn-BHm" firstAttribute="leading" secondItem="03i-qZ-Vnv" secondAttribute="leading" constant="8" id="6Fq-Wi-tqV"/>
                                     <constraint firstAttribute="bottom" secondItem="VkS-vx-e3i" secondAttribute="bottom" constant="10" id="CB0-D2-2Y8"/>
@@ -912,10 +912,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oHC-H5-EYU">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oHC-H5-EYU">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8fu-Nc-eme">
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8fu-Nc-eme">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hDV-zT-XcO">
@@ -932,6 +932,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="hDV-zT-XcO" secondAttribute="trailing" constant="8" id="NON-Pr-tSB"/>
+                                            <constraint firstAttribute="bottom" secondItem="hDV-zT-XcO" secondAttribute="bottom" constant="30" id="WrR-sU-uxe"/>
                                             <constraint firstItem="hDV-zT-XcO" firstAttribute="top" secondItem="8fu-Nc-eme" secondAttribute="top" constant="50" id="k5f-hW-snM"/>
                                             <constraint firstItem="hDV-zT-XcO" firstAttribute="leading" secondItem="8fu-Nc-eme" secondAttribute="leading" constant="8" id="mt2-LV-XvL"/>
                                         </constraints>
@@ -979,7 +980,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="PLH-Jd-clY" firstAttribute="top" secondItem="OLZ-oK-0O9" secondAttribute="top" constant="4" id="8j9-L1-le6"/>
                                     <constraint firstAttribute="bottom" secondItem="PLH-Jd-clY" secondAttribute="bottom" constant="5" id="MZG-WR-0NE"/>
