--- a/StackQA/en.lproj/Main.storyboard
+++ b/StackQA/en.lproj/Main.storyboard
@@ -182,6 +182,9 @@
                                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <action selector="showCommentsList:" destination="bCr-2z-dpc" eventType="touchUpInside" id="KVo-Xo-7Wr"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <constraints>
@@ -236,6 +239,7 @@
                         <segue destination="L2G-jD-e0s" kind="presentation" identifier="showQuestionForm" id="Zma-F1-cBs"/>
                         <segue destination="8TF-aP-r7l" kind="show" identifier="showAnswersListForQuestion" id="1uy-uL-sgR"/>
                         <segue destination="cL6-eH-Cbk" kind="show" identifier="categoryDetail" id="ZLp-YM-B5i"/>
+                        <segue destination="cyX-9e-sgK" kind="show" identifier="comments_list" id="tDv-ys-ffD"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YUx-wJ-w8j" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1887,17 +1891,17 @@
         <image name="white-tag.png" width="141" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ogc-fD-TQd"/>
-        <segue reference="4oy-yi-Vs6"/>
-        <segue reference="hPV-is-y6G"/>
         <segue reference="x3p-uV-IHe"/>
         <segue reference="uQv-Ln-Urv"/>
         <segue reference="dmP-y8-1gh"/>
         <segue reference="jdO-yh-WYz"/>
         <segue reference="j2K-an-z6G"/>
-        <segue reference="g3P-Gf-qaj"/>
-        <segue reference="j9r-YK-ysW"/>
+        <segue reference="Zma-F1-cBs"/>
+        <segue reference="1uy-uL-sgR"/>
+        <segue reference="tDv-ys-ffD"/>
         <segue reference="Mye-8z-EVr"/>
         <segue reference="84w-cX-ZdW"/>
+        <segue reference="4oy-yi-Vs6"/>
+        <segue reference="Ogc-fD-TQd"/>
     </inferredMetricsTieBreakers>
 </document>
