--- a/StackQA/en.lproj/Main.storyboard
+++ b/StackQA/en.lproj/Main.storyboard
@@ -1891,17 +1891,17 @@
         <image name="white-tag.png" width="141" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4oy-yi-Vs6"/>
-        <segue reference="Ogc-fD-TQd"/>
+        <segue reference="dmP-y8-1gh"/>
         <segue reference="x3p-uV-IHe"/>
         <segue reference="zlR-QY-YZy"/>
+        <segue reference="tDv-ys-ffD"/>
         <segue reference="1uy-uL-sgR"/>
         <segue reference="Zma-F1-cBs"/>
-        <segue reference="tDv-ys-ffD"/>
         <segue reference="Mye-8z-EVr"/>
-        <segue reference="84w-cX-ZdW"/>
-        <segue reference="dmP-y8-1gh"/>
         <segue reference="jdO-yh-WYz"/>
+        <segue reference="pXd-z1-64T"/>
         <segue reference="j2K-an-z6G"/>
+        <segue reference="Ogc-fD-TQd"/>
+        <segue reference="4oy-yi-Vs6"/>
     </inferredMetricsTieBreakers>
 </document>
