--- a/StackQA/en.lproj/Main.storyboard
+++ b/StackQA/en.lproj/Main.storyboard
@@ -471,7 +471,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="Tuj-Gd-gTz" secondAttribute="bottom" constant="8" id="VFB-MP-eml"/>
                                     <constraint firstItem="Tuj-Gd-gTz" firstAttribute="leading" secondItem="cPS-IS-TKD" secondAttribute="leading" constant="17" id="VzJ-QT-moj"/>
@@ -608,7 +608,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="Wk0-IQ-fLU" secondAttribute="bottom" constant="8" id="0tM-n5-2Dy"/>
                                     <constraint firstAttribute="bottom" secondItem="sqH-0z-IcO" secondAttribute="bottom" constant="8" id="CRy-Gp-Ru7"/>
@@ -723,7 +723,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="Mt7-zn-BHm" firstAttribute="leading" secondItem="03i-qZ-Vnv" secondAttribute="leading" constant="8" id="6Fq-Wi-tqV"/>
                                     <constraint firstAttribute="bottom" secondItem="VkS-vx-e3i" secondAttribute="bottom" constant="10" id="CB0-D2-2Y8"/>
@@ -865,7 +865,7 @@
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                 </subviews>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="Iyz-1J-Xgt" secondAttribute="bottom" constant="6" id="5Pd-Wq-4kN"/>
                                     <constraint firstItem="yzR-9W-VAa" firstAttribute="top" secondItem="T0z-3g-isZ" secondAttribute="top" constant="6" id="7cn-rr-eU9"/>
@@ -984,7 +984,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="PLH-Jd-clY" firstAttribute="top" secondItem="OLZ-oK-0O9" secondAttribute="top" constant="4" id="8j9-L1-le6"/>
                                     <constraint firstAttribute="bottom" secondItem="PLH-Jd-clY" secondAttribute="bottom" constant="5" id="MZG-WR-0NE"/>
@@ -1895,13 +1895,13 @@
         <segue reference="x3p-uV-IHe"/>
         <segue reference="zlR-QY-YZy"/>
         <segue reference="tDv-ys-ffD"/>
-        <segue reference="1uy-uL-sgR"/>
         <segue reference="Zma-F1-cBs"/>
+        <segue reference="1uy-uL-sgR"/>
         <segue reference="Mye-8z-EVr"/>
         <segue reference="jdO-yh-WYz"/>
         <segue reference="pXd-z1-64T"/>
-        <segue reference="j2K-an-z6G"/>
-        <segue reference="Ogc-fD-TQd"/>
         <segue reference="4oy-yi-Vs6"/>
+        <segue reference="Ogc-fD-TQd"/>
+        <segue reference="5Em-mt-R6W"/>
     </inferredMetricsTieBreakers>
 </document>
